--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -16,6 +16,10 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+  <!-- Add Material Icons -->
+  <!-- https://material.io/tools/icons/?style=baseline -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 <body>
   <app-root></app-root>
