--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -21,7 +21,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
-<body>
-  <app-root></app-root>
-</body>
+
+  <body class="body-web">
+    <app-root></app-root>
+  </body>
 </html>
